--- a/styles.css
+++ b/styles.css
@@ -5,5 +5,5 @@ article{margin-top: 100px;
   margin-right: 80px;
   margin-left: 80px;
 }
-h2{backround-color: green;}
-p{backround-color: yellow;}
+h2{color: green;}
+p{color: yellow;}
